# termix

./: CLAUDE.md  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/renderer/: mod.rs
src/shortcut/: mod.rs
src/terminal/: mod.rs  pty.rs
src/tray/: mod.rs
src/ui/: input.rs  mod.rs  window.rs
src/vte/: mod.rs
