[package]
name = "termix"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wayland layer-shell window (dropdown surface)
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# KDE DBus (global shortcut + KWin)
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
futures-util = "0.3"
libc = "0.2"

# Terminal emulation
portable-pty = "0.8"
alacritty_terminal = "0.24"
fontdue = "0.9"

# Input handling
xkbcommon = { version = "0.7", features = ["wayland"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
